<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menuItem_addTask">Add Task</string>
    <string name="menuTitle_showDurationReport">Duration Report</string>
    <string name="menuTitle_settings">Settings</string>
    <string name="menuTitle_about">About</string>
    <string name="menuItem_generate">Generate data</string>
    <string name="no_task_message">No Task being timed</string>
    <string name="list_item_edit_button_description">Button to edit a task detail</string>
    <string name="task_item_delete_button_description">Button to delete a task</string>
    <string name="add_or_edit_save_button_text">Save</string>
    <string name="add_or_edit_name">Add your task name</string>
    <string name="add_or_edit_description">Task description (optional)</string>
    <string name="add_or_edit_sort_order">Order: sorts low to high</string>
    <string name="add_or_edit_save">Save task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instruction_title">Instructions</string>
    <string name = "instruction_message">Use the add button (+) in the toolbar above to create new tasks.
        \n\nTasks with lower sort orders will be placed higher up the list. Tasks with the same sort order will be sorted alphabetically. \n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed). \n\nEach task has Edit
        and Delete buttons if you want to change the details or remove the task.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_pos_caption">Delete</string>
    <string name="cancel_edit_dialog_pos_caption">Abandon changes</string>
    <string name="cancel_edit_dialog_neg_caption">Continue editing</string>
    <string name="delete_dialog_neg_caption">No</string>
    <string name="delete_dialog_message_caption">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancel_edit_dialog_message">You have unsaved changes. Do you want to abandon your changes or continue editing?</string>
    <string name="about_copyright">Copyright \u00a9 2020 Learnprogramming.</string>
    <string name="about_weblink_v21">Instructions available at www.google.com</string>
    <string name="about_weblink">Instructions available at </string>
    <string name="about__weblink_url"><u> https://www.google.com</u></string>

    <string name="about_email">For support, email farinupeter@gmail.com</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org <b>Anonymous</b></string>
    <string name="timing_title_message">Currently timing %1$s</string>

</resources>
