<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.petprog.tasktimer.MainActivity">
    <item
        android:id="@+id/menu_addTask"
        android:icon="@drawable/baseline_add_white_48"
        android:title="@string/menuItem_addTask"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_showDuration"
        android:icon="@drawable/baseline_list_alt_white_24"
        android:orderInCategory="20"
        android:title="@string/menuTitle_showDurationReport"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="30"
        android:title="@string/menuTitle_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/baseline_info_white_24"
        android:orderInCategory="40"
        android:title="@string/menuTitle_about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_generateData"
        android:orderInCategory="50"
        android:title="@string/menuItem_generate"
        android:visible="false"
        app:showAsAction="never" />
</menu>
